[gd_scene load_steps=9 format=3 uid="uid://bgpbvjwjyab2g"]

[ext_resource type="PackedScene" uid="uid://bwwax6ypmwh3q" path="res://scenes/editor/pose_editor/player_full.tscn" id="1_7077t"]
[ext_resource type="Script" path="res://scripts/pose_editor/master.gd" id="1_vqpyv"]
[ext_resource type="Script" path="res://scripts/pose_editor/pose_editor_camera.gd" id="2_84yji"]
[ext_resource type="PackedScene" uid="uid://s0qousks114p" path="res://scenes/editor/pose_editor/player_slim.tscn" id="3_e0nhy"]
[ext_resource type="Script" path="res://scripts/pose_editor/skin_selector.gd" id="5_v6e1j"]

[sub_resource type="Environment" id="Environment_vfflu"]
background_mode = 1
background_color = Color(0.529412, 0.647059, 1, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.53

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_h6q85"]

[sub_resource type="Theme" id="Theme_ng688"]

[node name="pose_editor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vqpyv")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.965926, -0.103548, -0.237203, 0, -0.916481, 0.400077, -0.258819, 0.386445, 0.885253, 0, 3.65154, -1.89555)
light_energy = 0.543

[node name="player_full" parent="." instance=ExtResource("1_7077t")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.20628, -2.34576)

[node name="player_slim" parent="." instance=ExtResource("3_e0nhy")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.20832, -2.34686)
visible = false

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="FreeLookCamera" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0, 2.33276, 0.666622)
cull_mask = 1047553
current = true
script = ExtResource("2_84yji")

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport"]
environment = SubResource("Environment_vfflu")
camera_attributes = SubResource("CameraAttributesPractical_h6q85")

[node name="LeftContainer" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
offset_right = 236.0
offset_bottom = 1080.0
size_flags_horizontal = 3
mouse_filter = 2
theme = SubResource("Theme_ng688")
theme_override_constants/separation = 0

[node name="items" type="ItemList" parent="LeftContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="LeftContainer"]
layout_mode = 2
columns = 2

[node name="x_label" type="Label" parent="LeftContainer/GridContainer"]
layout_mode = 2
text = "X Rot"

[node name="x" type="HSlider" parent="LeftContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 360.0

[node name="y_label" type="Label" parent="LeftContainer/GridContainer"]
layout_mode = 2
text = "Y Rot"

[node name="y" type="HSlider" parent="LeftContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 1
max_value = 360.0

[node name="z_label" type="Label" parent="LeftContainer/GridContainer"]
layout_mode = 2
text = "Z Rot"

[node name="z" type="HSlider" parent="LeftContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 1
max_value = 360.0

[node name="bend_label" type="Label" parent="LeftContainer/GridContainer"]
layout_mode = 2
text = "Bend"

[node name="bend" type="HSlider" parent="LeftContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 1
max_value = 50.0

[node name="GridContainer2" type="GridContainer" parent="LeftContainer"]
layout_mode = 2
size_flags_vertical = 0
columns = 2

[node name="SkinSelectLabel" type="Label" parent="LeftContainer/GridContainer2"]
layout_mode = 2
text = "Player Skin"
vertical_alignment = 2

[node name="SkinSelect" type="Button" parent="LeftContainer/GridContainer2"]
layout_mode = 2
text = "Select File..."
script = ExtResource("5_v6e1j")

[node name="SkinTypeLabel" type="Label" parent="LeftContainer/GridContainer2"]
layout_mode = 2
text = "Type"
vertical_alignment = 2

[node name="SkinType" type="OptionButton" parent="LeftContainer/GridContainer2"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Wide"
popup/item_0/id = 0
popup/item_1/text = "Slim"
popup/item_1/id = 1

[node name="SaveButton" type="Button" parent="LeftContainer/GridContainer2"]
layout_mode = 2
text = "Save pose"

[node name="Spacer" type="Control" parent="LeftContainer/GridContainer2"]
layout_mode = 2

[node name="SkinFileDialog" type="FileDialog" parent="LeftContainer"]
title = "Open a File"
initial_position = 2
size = Vector2i(500, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png ; PNG Images")

[node name="PreviewViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false

[node name="Camera3D" type="Camera3D" parent="PreviewViewport"]
transform = Transform3D(1, 0, 0, 0, 0.999667, 0.0257931, 0, -0.0257931, 0.999667, 0, 2.32649, 2.38074)
cull_mask = 1047553
fov = 30.0

[connection signal="item_selected" from="LeftContainer/items" to="." method="_on_items_item_selected"]
[connection signal="value_changed" from="LeftContainer/GridContainer/x" to="." method="_on_x_value_changed"]
[connection signal="value_changed" from="LeftContainer/GridContainer/y" to="." method="_on_y_value_changed"]
[connection signal="value_changed" from="LeftContainer/GridContainer/z" to="." method="_on_z_value_changed"]
[connection signal="value_changed" from="LeftContainer/GridContainer/bend" to="." method="_on_bend_value_changed"]
[connection signal="item_selected" from="LeftContainer/GridContainer2/SkinType" to="." method="_on_skintype_item_selected"]
[connection signal="pressed" from="LeftContainer/GridContainer2/SaveButton" to="." method="save_current_pose"]
[connection signal="file_selected" from="LeftContainer/SkinFileDialog" to="." method="_on_file_dialog_file_selected"]
